test/classes/bradc/arrayInClass/arrayDomInClassRecord-illegal.good
arrayDomInClassRecord-illegal.chpl:33: error: illegal lvalue in assignment
